Fixed bug #38488 (Access to "php://stdin" and family crashes PHP on win32)